--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -1,18 +1,31 @@
-name: GitHub Actions Demo
-run-name: ${{ github.actor }} is testing out GitHub Actions
-on: [push, workflow_dispatch]
+name: ci-workflow
+on: [workflow_dispatch, push]
 jobs:
-  Explore-GitHub-Actions:
+  ci-pipeline:
     runs-on: ubuntu-latest
     steps:
-      - run: echo "The job was automatically triggered by a ${{ github.event_name }} event."
-      - run: echo "This job is now running on a ${{ runner.os }} server hosted by GitHub!"
-      - run: echo "The name of your branch is ${{ github.ref }} and your repository is ${{ github.repository }}."
-      - name: Check out repository code
+      - name: Check out repository
         uses: actions/checkout@v4
-      - run: echo "The ${{ github.repository }} repository has been cloned to the runner."
-      - run: echo "The workflow is now ready to test your code on the runner."
-      - name: List files in the repository
-        run: |
-          ls ${{ github.workspace }}
-      - run: echo "This job's status is ${{ job.status }}."
+        
+      - name: Set up node 20
+        uses: actions/setup-node@v4
+        with:
+          node-version: 20
+  
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Check formatting
+        run: npm run prettier
+
+      - name: Check types
+        run: npm run typecheck
+
+      - name: Check linting
+        run: npm run lint
+
+      - name: Execute tests
+        run: npm run test
+
+      - name: Execute build
+        run: npm run build
